--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
+html, body { 
+    margin: 0; 
+    background-color: cornsilk;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: lightsalmon;
+    border-bottom: solid 3px wheat;
+    padding-bottom: 60px;
+}
+
+a {
+    height: auto;
+    position : relative;
+    top : 30px;
+    font-size: large;
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: white;
+}
+
+form {
+    margin: 30px 300px 30px 300px;
+}
+
+.blocform {
+    display: block;
+}
+
+
+
+
 table {
     border: solid 1px black;
 }
